@@ -31,14 +31,14 @@ from distutils.core import setup, Extension  # pylint: disable=import-error,no-n
 sys.path = sp
 
 assert len(sys.argv) == 1
-sys.argv.append("build")
+sys.argv.append(u"build")
 
-setup(name="CModule",
-      version="cvs",
-      description="duplicity's C component",
-      ext_modules=[Extension("_librsync",
-                             ["_librsyncmodule.c"],
-                             libraries=["rsync"])])
+setup(name=r"CModule",
+      version=u"cvs",
+      description=u"duplicity's C component",
+      ext_modules=[Extension(name=r"_librsync",
+                             sources=[r"_librsyncmodule.c"],
+                             libraries=[u"rsync"])])
 
-assert not os.system("mv `find build -name '_librsync*.so'` .")
-assert not os.system("rm -rf build")
+assert not os.system(u"mv `find build -name '_librsync*.so'` .")
+assert not os.system(u"rm -rf build")
