@@ -431,6 +431,10 @@ New in v0.8.00 (2019/??/??)
   - Fix bug 1828869: refresh CollectionsStatus after sync
 * Fixed bug #1828662 with patch from Bas Hulsken
   - string.split() had been deprecated in 2, removed in 3.7
+* Some more work on unadorned strings
+  - Fixed test_unadorned_string_literals to list all strings found
+  - Added bin/duplicity and bin/rdiffdir to list of files tested
+  - All unadorned strings have now been adorned
 
 
 New in v0.7.08 (2016/07/02)
